Solved some alignment issue

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,9 +26,9 @@ body {
 }
 
 .app {
-  /* max-width: 800px; */
-  margin: 2rem auto;
+  margin: 2rem auto 0;
   padding: 1rem;
+  max-width: 960px;
 }
 
 header {
